corrected floats on mobile

--- a/Hotel/mobile.css
+++ b/Hotel/mobile.css
@@ -37,3 +37,14 @@ body {
   float: none;
   width: 100%;
 }
+
+#about-info .info-right,
+#about-info .info-left {
+  float: none;
+  width: 100%;
+}
+
+.l-heading {
+  text-align: center;
+  line-height: 1.5px;
+}
